--- a/css/blokai.css
+++ b/css/blokai.css
@@ -1,7 +1,8 @@
 .header {
     background-color: rgb(202, 173, 229);
     display: flex;
-
+    align-items: center;
+    align-content: center;
 }
 .menu {
     background-color: rgb(132, 136, 136);
@@ -9,6 +10,7 @@
     flex-direction: column;
     align-items: flex-start;
     width: 150px;
+    text-align: center;
 }
 .blokas {
     background-color: bisque;
