--- a/css/button.css
+++ b/css/button.css
@@ -1,9 +1,10 @@
 .button1 {
     padding: 20px;
     background-color: rgb(160, 161, 231);
-    flex-basis: 150px;
     transition-duration: 0.5s;
     text-decoration: none;
+    flex-basis: 150px;
+    line-height: 0;
 }
 .button1:hover, .button2:hover {
     background-color: blueviolet;
